[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "sysmon"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "psutil",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]